@@ -4,7 +4,6 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 
-import static org.endeavourhealth.imapi.model.tripletree.TTIriRef.iri;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class TTDocumentTest {
@@ -24,15 +23,13 @@ class TTDocumentTest {
   }
 
   private void checkDocument(TTDocument first, TTDocument second) {
-    assertEquals(first.getGraph(), second.getGraph());
-    assertEquals(first.getEntities().get(0).getIri(),
-      second.getEntities().get(0).getIri());
+    assertEquals(first.getEntities().getFirst().getIri(),
+      second.getEntities().getFirst().getIri());
   }
 
 
   private TTDocument getTestDocument() {
     TTDocument result = new TTDocument();
-    result.setGraph(iri("http://testgraph"));
     result.addPrefix(new TTPrefix("http://endhealth.info/im#", "im"));
     result.addEntity(TestHelper.getTestEntity());
     return result;
